# BreastLesionSegmentation

./: README.md
UltrasoundAI/: CMakeLists.txt
UltrasoundAI/BreastLesionSegmentation/: BreastLesionSegmentation.py  CMakeLists.txt
UltrasoundAI/BreastLesionSegmentation/Resources/Data/Predicted_mask/: dummy.txt
UltrasoundAI/BreastLesionSegmentation/Resources/UI/: BreastLesionSegmentation.ui
UltrasoundAI/BreastLesionSegmentation/Training/: segmentation_model_0001_Preprocess.py  segmentation_model_0001_Training.ipynb
